// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MonstersFilter should render with full props 1`] = `
<div
  className="monsters-table--filter"
>
  <div
    className="nice-control-group monsters-table--filter-select"
  >
    <span
      className="nice-input-addon"
    >
      Name
    </span>
    <input
      className="nice-form-control"
      data-name="search"
      disabled={undefined}
      onChange={[Function]}
      onKeyPress={null}
      placeholder="Search..."
      type="text"
      value="bear"
    />
  </div>
  <div
    className="nice-control-group monsters-table--filter-select"
  >
    <span
      className="nice-input-addon"
    >
      Campaign
    </span>
    <div
      className="nice-dropdown nice-form-control"
      data-name="campaign"
      defaultValue={Array []}
    >
      <button
        className="nice-btn"
        onClick={[Function]}
      >
        Some campaign
        <i
          className="icon fa-angle-down"
        />
      </button>
      <ul
        className="dropdown-menu"
        onClick={[Function]}
      >
        <li
          className={null}
          data-value={null}
        >
          <label>
            <input
              checked={false}
              disabled={undefined}
              onChange={[Function]}
              type="checkbox"
            />
            Unassigned
          </label>
        </li>
        <li
          className="info"
          data-value={2}
        >
          <label>
            <input
              checked={true}
              disabled={false}
              onChange={[Function]}
              type="checkbox"
            />
            Some campaign
          </label>
        </li>
      </ul>
    </div>
  </div>
  <div
    className="nice-control-group monsters-table--filter-select"
  >
    <span
      className="nice-input-addon"
    >
      Size
    </span>
    <div
      className="nice-dropdown nice-form-control"
      data-name="size"
      defaultValue={Array []}
    >
      <button
        className="nice-btn"
        onClick={[Function]}
      >
        2 selected
        <i
          className="icon fa-angle-down"
        />
      </button>
      <ul
        className="dropdown-menu"
        onClick={[Function]}
      >
        <li
          className={null}
          data-value="tiny"
        >
          <label>
            <input
              checked={false}
              disabled={false}
              onChange={[Function]}
              type="checkbox"
            />
            Tiny
          </label>
        </li>
        <li
          className="info"
          data-value="small"
        >
          <label>
            <input
              checked={true}
              disabled={false}
              onChange={[Function]}
              type="checkbox"
            />
            Small
          </label>
        </li>
        <li
          className="info"
          data-value="medium"
        >
          <label>
            <input
              checked={true}
              disabled={false}
              onChange={[Function]}
              type="checkbox"
            />
            Medium
          </label>
        </li>
        <li
          className={null}
          data-value="large"
        >
          <label>
            <input
              checked={false}
              disabled={false}
              onChange={[Function]}
              type="checkbox"
            />
            Large
          </label>
        </li>
        <li
          className={null}
          data-value="huge"
        >
          <label>
            <input
              checked={false}
              disabled={false}
              onChange={[Function]}
              type="checkbox"
            />
            Huge
          </label>
        </li>
        <li
          className={null}
          data-value="gargantuan"
        >
          <label>
            <input
              checked={false}
              disabled={false}
              onChange={[Function]}
              type="checkbox"
            />
            Gargantuan
          </label>
        </li>
      </ul>
    </div>
  </div>
  <div
    className="nice-control-group monsters-table--filter-select"
  >
    <span
      className="nice-input-addon"
    >
      Type
    </span>
    <div
      className="nice-dropdown nice-form-control"
      data-name="types"
      defaultValue={Array []}
    >
      <button
        className="nice-btn"
        onClick={[Function]}
      >
        2 selected
        <i
          className="icon fa-angle-down"
        />
      </button>
      <ul
        className="dropdown-menu"
        onClick={[Function]}
      >
        <li
          className={null}
          data-value="Aberration"
        >
          <label>
            <input
              checked={false}
              disabled={false}
              onChange={[Function]}
              type="checkbox"
            />
            Aberration
          </label>
        </li>
        <li
          className={null}
          data-value="Beast"
        >
          <label>
            <input
              checked={false}
              disabled={false}
              onChange={[Function]}
              type="checkbox"
            />
            Beast
          </label>
        </li>
        <li
          className={null}
          data-value="Celestial"
        >
          <label>
            <input
              checked={false}
              disabled={false}
              onChange={[Function]}
              type="checkbox"
            />
            Celestial
          </label>
        </li>
        <li
          className={null}
          data-value="Construct"
        >
          <label>
            <input
              checked={false}
              disabled={false}
              onChange={[Function]}
              type="checkbox"
            />
            Construct
          </label>
        </li>
        <li
          className={null}
          data-value="Dragon"
        >
          <label>
            <input
              checked={false}
              disabled={false}
              onChange={[Function]}
              type="checkbox"
            />
            Dragon
          </label>
        </li>
        <li
          className={null}
          data-value="Elemental"
        >
          <label>
            <input
              checked={false}
              disabled={false}
              onChange={[Function]}
              type="checkbox"
            />
            Elemental
          </label>
        </li>
        <li
          className={null}
          data-value="Fey"
        >
          <label>
            <input
              checked={false}
              disabled={false}
              onChange={[Function]}
              type="checkbox"
            />
            Fey
          </label>
        </li>
        <li
          className={null}
          data-value="Fiend"
        >
          <label>
            <input
              checked={false}
              disabled={false}
              onChange={[Function]}
              type="checkbox"
            />
            Fiend
          </label>
        </li>
        <li
          className={null}
          data-value="Giant"
        >
          <label>
            <input
              checked={false}
              disabled={false}
              onChange={[Function]}
              type="checkbox"
            />
            Giant
          </label>
        </li>
        <li
          className={null}
          data-value="Humanoid"
        >
          <label>
            <input
              checked={false}
              disabled={false}
              onChange={[Function]}
              type="checkbox"
            />
            Humanoid
          </label>
        </li>
        <li
          className={null}
          data-value="Monstrosity"
        >
          <label>
            <input
              checked={false}
              disabled={false}
              onChange={[Function]}
              type="checkbox"
            />
            Monstrosity
          </label>
        </li>
        <li
          className={null}
          data-value="Ooze"
        >
          <label>
            <input
              checked={false}
              disabled={false}
              onChange={[Function]}
              type="checkbox"
            />
            Ooze
          </label>
        </li>
        <li
          className={null}
          data-value="Plant"
        >
          <label>
            <input
              checked={false}
              disabled={false}
              onChange={[Function]}
              type="checkbox"
            />
            Plant
          </label>
        </li>
        <li
          className={null}
          data-value="Undead"
        >
          <label>
            <input
              checked={false}
              disabled={false}
              onChange={[Function]}
              type="checkbox"
            />
            Undead
          </label>
        </li>
      </ul>
    </div>
  </div>
  <div
    className="nice-control-group monsters-table--filter-select"
  >
    <span
      className="nice-input-addon"
    >
      Alignment
    </span>
    <div
      className="nice-dropdown nice-form-control"
      data-name="alignment"
      defaultValue={Array []}
    >
      <button
        className="nice-btn"
        onClick={[Function]}
      >
        All Alignments
        <i
          className="icon fa-angle-down"
        />
      </button>
      <ul
        className="dropdown-menu"
        onClick={[Function]}
      >
        <li
          className={null}
          data-value="lawful good"
        >
          <label>
            <input
              checked={false}
              disabled={false}
              onChange={[Function]}
              type="checkbox"
            />
            Lawful good
          </label>
        </li>
        <li
          className={null}
          data-value="neutral good"
        >
          <label>
            <input
              checked={false}
              disabled={false}
              onChange={[Function]}
              type="checkbox"
            />
            Neutral good
          </label>
        </li>
        <li
          className={null}
          data-value="chaotic good"
        >
          <label>
            <input
              checked={false}
              disabled={false}
              onChange={[Function]}
              type="checkbox"
            />
            Chaotic good
          </label>
        </li>
        <li
          className={null}
          data-value="lawful neutral"
        >
          <label>
            <input
              checked={false}
              disabled={false}
              onChange={[Function]}
              type="checkbox"
            />
            Lawful neutral
          </label>
        </li>
        <li
          className={null}
          data-value="true neutral"
        >
          <label>
            <input
              checked={false}
              disabled={false}
              onChange={[Function]}
              type="checkbox"
            />
            True neutral
          </label>
        </li>
        <li
          className={null}
          data-value="chaotic neutral"
        >
          <label>
            <input
              checked={false}
              disabled={false}
              onChange={[Function]}
              type="checkbox"
            />
            Chaotic neutral
          </label>
        </li>
        <li
          className={null}
          data-value="lawful evil"
        >
          <label>
            <input
              checked={false}
              disabled={false}
              onChange={[Function]}
              type="checkbox"
            />
            Lawful evil
          </label>
        </li>
        <li
          className={null}
          data-value="neutral evil"
        >
          <label>
            <input
              checked={false}
              disabled={false}
              onChange={[Function]}
              type="checkbox"
            />
            Neutral evil
          </label>
        </li>
        <li
          className={null}
          data-value="chaotic evil"
        >
          <label>
            <input
              checked={false}
              disabled={false}
              onChange={[Function]}
              type="checkbox"
            />
            Chaotic evil
          </label>
        </li>
      </ul>
    </div>
  </div>
  <div
    className="nice-control-group monsters-table--filter-select"
  >
    <span
      className="nice-input-addon"
    >
      Level
    </span>
    <div
      className="nice-dropdown nice-form-control"
      data-name="levels"
      defaultValue={Array []}
    >
      <button
        className="nice-btn"
        onClick={[Function]}
      >
        3 selected
        <i
          className="icon fa-angle-down"
        />
      </button>
      <ul
        className="dropdown-menu"
        onClick={[Function]}
      >
        <li
          className="info"
          data-value={1}
        >
          <label>
            <input
              checked={true}
              disabled={false}
              onChange={[Function]}
              type="checkbox"
            />
            Level 1
          </label>
        </li>
        <li
          className="info"
          data-value={2}
        >
          <label>
            <input
              checked={true}
              disabled={false}
              onChange={[Function]}
              type="checkbox"
            />
            Level 2
          </label>
        </li>
        <li
          className="info"
          data-value={3}
        >
          <label>
            <input
              checked={true}
              disabled={false}
              onChange={[Function]}
              type="checkbox"
            />
            Level 3
          </label>
        </li>
        <li
          className={null}
          data-value={4}
        >
          <label>
            <input
              checked={false}
              disabled={false}
              onChange={[Function]}
              type="checkbox"
            />
            Level 4
          </label>
        </li>
        <li
          className={null}
          data-value={5}
        >
          <label>
            <input
              checked={false}
              disabled={false}
              onChange={[Function]}
              type="checkbox"
            />
            Level 5
          </label>
        </li>
        <li
          className={null}
          data-value={6}
        >
          <label>
            <input
              checked={false}
              disabled={false}
              onChange={[Function]}
              type="checkbox"
            />
            Level 6
          </label>
        </li>
        <li
          className={null}
          data-value={7}
        >
          <label>
            <input
              checked={false}
              disabled={false}
              onChange={[Function]}
              type="checkbox"
            />
            Level 7
          </label>
        </li>
        <li
          className={null}
          data-value={8}
        >
          <label>
            <input
              checked={false}
              disabled={false}
              onChange={[Function]}
              type="checkbox"
            />
            Level 8
          </label>
        </li>
        <li
          className={null}
          data-value={9}
        >
          <label>
            <input
              checked={false}
              disabled={false}
              onChange={[Function]}
              type="checkbox"
            />
            Level 9
          </label>
        </li>
        <li
          className={null}
          data-value={10}
        >
          <label>
            <input
              checked={false}
              disabled={false}
              onChange={[Function]}
              type="checkbox"
            />
            Level 10
          </label>
        </li>
        <li
          className={null}
          data-value={11}
        >
          <label>
            <input
              checked={false}
              disabled={false}
              onChange={[Function]}
              type="checkbox"
            />
            Level 11
          </label>
        </li>
        <li
          className={null}
          data-value={12}
        >
          <label>
            <input
              checked={false}
              disabled={false}
              onChange={[Function]}
              type="checkbox"
            />
            Level 12
          </label>
        </li>
        <li
          className={null}
          data-value={13}
        >
          <label>
            <input
              checked={false}
              disabled={false}
              onChange={[Function]}
              type="checkbox"
            />
            Level 13
          </label>
        </li>
        <li
          className={null}
          data-value={14}
        >
          <label>
            <input
              checked={false}
              disabled={false}
              onChange={[Function]}
              type="checkbox"
            />
            Level 14
          </label>
        </li>
        <li
          className={null}
          data-value={15}
        >
          <label>
            <input
              checked={false}
              disabled={false}
              onChange={[Function]}
              type="checkbox"
            />
            Level 15
          </label>
        </li>
        <li
          className={null}
          data-value={16}
        >
          <label>
            <input
              checked={false}
              disabled={false}
              onChange={[Function]}
              type="checkbox"
            />
            Level 16
          </label>
        </li>
        <li
          className={null}
          data-value={17}
        >
          <label>
            <input
              checked={false}
              disabled={false}
              onChange={[Function]}
              type="checkbox"
            />
            Level 17
          </label>
        </li>
        <li
          className={null}
          data-value={18}
        >
          <label>
            <input
              checked={false}
              disabled={false}
              onChange={[Function]}
              type="checkbox"
            />
            Level 18
          </label>
        </li>
        <li
          className={null}
          data-value={19}
        >
          <label>
            <input
              checked={false}
              disabled={false}
              onChange={[Function]}
              type="checkbox"
            />
            Level 19
          </label>
        </li>
        <li
          className={null}
          data-value={20}
        >
          <label>
            <input
              checked={false}
              disabled={false}
              onChange={[Function]}
              type="checkbox"
            />
            Level 20
          </label>
        </li>
        <li
          className={null}
          data-value={21}
        >
          <label>
            <input
              checked={false}
              disabled={false}
              onChange={[Function]}
              type="checkbox"
            />
            Level 21
          </label>
        </li>
        <li
          className={null}
          data-value={22}
        >
          <label>
            <input
              checked={false}
              disabled={false}
              onChange={[Function]}
              type="checkbox"
            />
            Level 22
          </label>
        </li>
        <li
          className={null}
          data-value={23}
        >
          <label>
            <input
              checked={false}
              disabled={false}
              onChange={[Function]}
              type="checkbox"
            />
            Level 23
          </label>
        </li>
        <li
          className={null}
          data-value={24}
        >
          <label>
            <input
              checked={false}
              disabled={false}
              onChange={[Function]}
              type="checkbox"
            />
            Level 24
          </label>
        </li>
        <li
          className={null}
          data-value={25}
        >
          <label>
            <input
              checked={false}
              disabled={false}
              onChange={[Function]}
              type="checkbox"
            />
            Level 25
          </label>
        </li>
        <li
          className={null}
          data-value={26}
        >
          <label>
            <input
              checked={false}
              disabled={false}
              onChange={[Function]}
              type="checkbox"
            />
            Level 26
          </label>
        </li>
        <li
          className={null}
          data-value={27}
        >
          <label>
            <input
              checked={false}
              disabled={false}
              onChange={[Function]}
              type="checkbox"
            />
            Level 27
          </label>
        </li>
        <li
          className={null}
          data-value={28}
        >
          <label>
            <input
              checked={false}
              disabled={false}
              onChange={[Function]}
              type="checkbox"
            />
            Level 28
          </label>
        </li>
        <li
          className={null}
          data-value={29}
        >
          <label>
            <input
              checked={false}
              disabled={false}
              onChange={[Function]}
              type="checkbox"
            />
            Level 29
          </label>
        </li>
        <li
          className={null}
          data-value={30}
        >
          <label>
            <input
              checked={false}
              disabled={false}
              onChange={[Function]}
              type="checkbox"
            />
            Level 30
          </label>
        </li>
      </ul>
    </div>
  </div>
  <div
    className="nice-control-group monsters-table--filter-min-max"
    data-name="cr"
  >
    <span
      className="nice-input-addon"
    >
      CR
    </span>
    <input
      className="nice-form-control"
      disabled={undefined}
      onChange={[Function]}
      onKeyPress={null}
      placeholder="Min..."
      type="number"
      value={0.1}
    />
    <span
      className="nice-input-addon"
    >
      min
    </span>
    <input
      className="nice-form-control"
      disabled={undefined}
      onChange={[Function]}
      onKeyPress={null}
      placeholder="Max..."
      type="number"
      value={0.75}
    />
    <span
      className="nice-input-addon"
    >
      max
    </span>
  </div>
  <div
    className="nice-control-group monsters-table--filter-min-max"
    data-name="xp"
  >
    <span
      className="nice-input-addon"
    >
      XP
    </span>
    <input
      className="nice-form-control"
      disabled={undefined}
      onChange={[Function]}
      onKeyPress={null}
      placeholder="Min..."
      type="number"
      value={5}
    />
    <span
      className="nice-input-addon"
    >
      min
    </span>
    <input
      className="nice-form-control"
      disabled={undefined}
      onChange={[Function]}
      onKeyPress={null}
      placeholder="Max..."
      type="number"
      value={50}
    />
    <span
      className="nice-input-addon"
    >
      max
    </span>
  </div>
</div>
`;

exports[`MonstersFilter should render without props 1`] = `
<div
  className="monsters-table--filter"
>
  <div
    className="nice-control-group monsters-table--filter-select"
  >
    <span
      className="nice-input-addon"
    >
      Name
    </span>
    <input
      className="nice-form-control"
      data-name="search"
      disabled={undefined}
      onChange={[Function]}
      onKeyPress={null}
      placeholder="Search..."
      type="text"
      value=""
    />
  </div>
  <div
    className="nice-control-group monsters-table--filter-select"
  >
    <span
      className="nice-input-addon"
    >
      Campaign
    </span>
    <div
      className="nice-dropdown nice-form-control"
      data-name="campaign"
      defaultValue={Array []}
    >
      <button
        className="nice-btn"
        onClick={[Function]}
      >
        All Campaigns...
        <i
          className="icon fa-angle-down"
        />
      </button>
      <ul
        className="dropdown-menu"
        onClick={[Function]}
      >
        <li
          className={null}
          data-value={null}
        >
          <label>
            <input
              checked={false}
              disabled={undefined}
              onChange={[Function]}
              type="checkbox"
            />
            Unassigned
          </label>
        </li>
      </ul>
    </div>
  </div>
  <div
    className="nice-control-group monsters-table--filter-select"
  >
    <span
      className="nice-input-addon"
    >
      Size
    </span>
    <div
      className="nice-dropdown nice-form-control"
      data-name="size"
      defaultValue={Array []}
    >
      <button
        className="nice-btn"
        onClick={[Function]}
      >
        All Sizes
        <i
          className="icon fa-angle-down"
        />
      </button>
      <ul
        className="dropdown-menu"
        onClick={[Function]}
      >
        <li
          className={null}
          data-value="tiny"
        >
          <label>
            <input
              checked={false}
              disabled={false}
              onChange={[Function]}
              type="checkbox"
            />
            Tiny
          </label>
        </li>
        <li
          className={null}
          data-value="small"
        >
          <label>
            <input
              checked={false}
              disabled={false}
              onChange={[Function]}
              type="checkbox"
            />
            Small
          </label>
        </li>
        <li
          className={null}
          data-value="medium"
        >
          <label>
            <input
              checked={false}
              disabled={false}
              onChange={[Function]}
              type="checkbox"
            />
            Medium
          </label>
        </li>
        <li
          className={null}
          data-value="large"
        >
          <label>
            <input
              checked={false}
              disabled={false}
              onChange={[Function]}
              type="checkbox"
            />
            Large
          </label>
        </li>
        <li
          className={null}
          data-value="huge"
        >
          <label>
            <input
              checked={false}
              disabled={false}
              onChange={[Function]}
              type="checkbox"
            />
            Huge
          </label>
        </li>
        <li
          className={null}
          data-value="gargantuan"
        >
          <label>
            <input
              checked={false}
              disabled={false}
              onChange={[Function]}
              type="checkbox"
            />
            Gargantuan
          </label>
        </li>
      </ul>
    </div>
  </div>
  <div
    className="nice-control-group monsters-table--filter-select"
  >
    <span
      className="nice-input-addon"
    >
      Type
    </span>
    <div
      className="nice-dropdown nice-form-control"
      data-name="types"
      defaultValue={Array []}
    >
      <button
        className="nice-btn"
        onClick={[Function]}
      >
        All Types
        <i
          className="icon fa-angle-down"
        />
      </button>
      <ul
        className="dropdown-menu"
        onClick={[Function]}
      >
        <li
          className={null}
          data-value="Aberration"
        >
          <label>
            <input
              checked={false}
              disabled={false}
              onChange={[Function]}
              type="checkbox"
            />
            Aberration
          </label>
        </li>
        <li
          className={null}
          data-value="Beast"
        >
          <label>
            <input
              checked={false}
              disabled={false}
              onChange={[Function]}
              type="checkbox"
            />
            Beast
          </label>
        </li>
        <li
          className={null}
          data-value="Celestial"
        >
          <label>
            <input
              checked={false}
              disabled={false}
              onChange={[Function]}
              type="checkbox"
            />
            Celestial
          </label>
        </li>
        <li
          className={null}
          data-value="Construct"
        >
          <label>
            <input
              checked={false}
              disabled={false}
              onChange={[Function]}
              type="checkbox"
            />
            Construct
          </label>
        </li>
        <li
          className={null}
          data-value="Dragon"
        >
          <label>
            <input
              checked={false}
              disabled={false}
              onChange={[Function]}
              type="checkbox"
            />
            Dragon
          </label>
        </li>
        <li
          className={null}
          data-value="Elemental"
        >
          <label>
            <input
              checked={false}
              disabled={false}
              onChange={[Function]}
              type="checkbox"
            />
            Elemental
          </label>
        </li>
        <li
          className={null}
          data-value="Fey"
        >
          <label>
            <input
              checked={false}
              disabled={false}
              onChange={[Function]}
              type="checkbox"
            />
            Fey
          </label>
        </li>
        <li
          className={null}
          data-value="Fiend"
        >
          <label>
            <input
              checked={false}
              disabled={false}
              onChange={[Function]}
              type="checkbox"
            />
            Fiend
          </label>
        </li>
        <li
          className={null}
          data-value="Giant"
        >
          <label>
            <input
              checked={false}
              disabled={false}
              onChange={[Function]}
              type="checkbox"
            />
            Giant
          </label>
        </li>
        <li
          className={null}
          data-value="Humanoid"
        >
          <label>
            <input
              checked={false}
              disabled={false}
              onChange={[Function]}
              type="checkbox"
            />
            Humanoid
          </label>
        </li>
        <li
          className={null}
          data-value="Monstrosity"
        >
          <label>
            <input
              checked={false}
              disabled={false}
              onChange={[Function]}
              type="checkbox"
            />
            Monstrosity
          </label>
        </li>
        <li
          className={null}
          data-value="Ooze"
        >
          <label>
            <input
              checked={false}
              disabled={false}
              onChange={[Function]}
              type="checkbox"
            />
            Ooze
          </label>
        </li>
        <li
          className={null}
          data-value="Plant"
        >
          <label>
            <input
              checked={false}
              disabled={false}
              onChange={[Function]}
              type="checkbox"
            />
            Plant
          </label>
        </li>
        <li
          className={null}
          data-value="Undead"
        >
          <label>
            <input
              checked={false}
              disabled={false}
              onChange={[Function]}
              type="checkbox"
            />
            Undead
          </label>
        </li>
      </ul>
    </div>
  </div>
  <div
    className="nice-control-group monsters-table--filter-select"
  >
    <span
      className="nice-input-addon"
    >
      Alignment
    </span>
    <div
      className="nice-dropdown nice-form-control"
      data-name="alignment"
      defaultValue={Array []}
    >
      <button
        className="nice-btn"
        onClick={[Function]}
      >
        All Alignments
        <i
          className="icon fa-angle-down"
        />
      </button>
      <ul
        className="dropdown-menu"
        onClick={[Function]}
      >
        <li
          className={null}
          data-value="lawful good"
        >
          <label>
            <input
              checked={false}
              disabled={false}
              onChange={[Function]}
              type="checkbox"
            />
            Lawful good
          </label>
        </li>
        <li
          className={null}
          data-value="neutral good"
        >
          <label>
            <input
              checked={false}
              disabled={false}
              onChange={[Function]}
              type="checkbox"
            />
            Neutral good
          </label>
        </li>
        <li
          className={null}
          data-value="chaotic good"
        >
          <label>
            <input
              checked={false}
              disabled={false}
              onChange={[Function]}
              type="checkbox"
            />
            Chaotic good
          </label>
        </li>
        <li
          className={null}
          data-value="lawful neutral"
        >
          <label>
            <input
              checked={false}
              disabled={false}
              onChange={[Function]}
              type="checkbox"
            />
            Lawful neutral
          </label>
        </li>
        <li
          className={null}
          data-value="true neutral"
        >
          <label>
            <input
              checked={false}
              disabled={false}
              onChange={[Function]}
              type="checkbox"
            />
            True neutral
          </label>
        </li>
        <li
          className={null}
          data-value="chaotic neutral"
        >
          <label>
            <input
              checked={false}
              disabled={false}
              onChange={[Function]}
              type="checkbox"
            />
            Chaotic neutral
          </label>
        </li>
        <li
          className={null}
          data-value="lawful evil"
        >
          <label>
            <input
              checked={false}
              disabled={false}
              onChange={[Function]}
              type="checkbox"
            />
            Lawful evil
          </label>
        </li>
        <li
          className={null}
          data-value="neutral evil"
        >
          <label>
            <input
              checked={false}
              disabled={false}
              onChange={[Function]}
              type="checkbox"
            />
            Neutral evil
          </label>
        </li>
        <li
          className={null}
          data-value="chaotic evil"
        >
          <label>
            <input
              checked={false}
              disabled={false}
              onChange={[Function]}
              type="checkbox"
            />
            Chaotic evil
          </label>
        </li>
      </ul>
    </div>
  </div>
  <div
    className="nice-control-group monsters-table--filter-select"
  >
    <span
      className="nice-input-addon"
    >
      Level
    </span>
    <div
      className="nice-dropdown nice-form-control"
      data-name="levels"
      defaultValue={Array []}
    >
      <button
        className="nice-btn"
        onClick={[Function]}
      >
        Any Level...
        <i
          className="icon fa-angle-down"
        />
      </button>
      <ul
        className="dropdown-menu"
        onClick={[Function]}
      >
        <li
          className={null}
          data-value={1}
        >
          <label>
            <input
              checked={false}
              disabled={false}
              onChange={[Function]}
              type="checkbox"
            />
            Level 1
          </label>
        </li>
        <li
          className={null}
          data-value={2}
        >
          <label>
            <input
              checked={false}
              disabled={false}
              onChange={[Function]}
              type="checkbox"
            />
            Level 2
          </label>
        </li>
        <li
          className={null}
          data-value={3}
        >
          <label>
            <input
              checked={false}
              disabled={false}
              onChange={[Function]}
              type="checkbox"
            />
            Level 3
          </label>
        </li>
        <li
          className={null}
          data-value={4}
        >
          <label>
            <input
              checked={false}
              disabled={false}
              onChange={[Function]}
              type="checkbox"
            />
            Level 4
          </label>
        </li>
        <li
          className={null}
          data-value={5}
        >
          <label>
            <input
              checked={false}
              disabled={false}
              onChange={[Function]}
              type="checkbox"
            />
            Level 5
          </label>
        </li>
        <li
          className={null}
          data-value={6}
        >
          <label>
            <input
              checked={false}
              disabled={false}
              onChange={[Function]}
              type="checkbox"
            />
            Level 6
          </label>
        </li>
        <li
          className={null}
          data-value={7}
        >
          <label>
            <input
              checked={false}
              disabled={false}
              onChange={[Function]}
              type="checkbox"
            />
            Level 7
          </label>
        </li>
        <li
          className={null}
          data-value={8}
        >
          <label>
            <input
              checked={false}
              disabled={false}
              onChange={[Function]}
              type="checkbox"
            />
            Level 8
          </label>
        </li>
        <li
          className={null}
          data-value={9}
        >
          <label>
            <input
              checked={false}
              disabled={false}
              onChange={[Function]}
              type="checkbox"
            />
            Level 9
          </label>
        </li>
        <li
          className={null}
          data-value={10}
        >
          <label>
            <input
              checked={false}
              disabled={false}
              onChange={[Function]}
              type="checkbox"
            />
            Level 10
          </label>
        </li>
        <li
          className={null}
          data-value={11}
        >
          <label>
            <input
              checked={false}
              disabled={false}
              onChange={[Function]}
              type="checkbox"
            />
            Level 11
          </label>
        </li>
        <li
          className={null}
          data-value={12}
        >
          <label>
            <input
              checked={false}
              disabled={false}
              onChange={[Function]}
              type="checkbox"
            />
            Level 12
          </label>
        </li>
        <li
          className={null}
          data-value={13}
        >
          <label>
            <input
              checked={false}
              disabled={false}
              onChange={[Function]}
              type="checkbox"
            />
            Level 13
          </label>
        </li>
        <li
          className={null}
          data-value={14}
        >
          <label>
            <input
              checked={false}
              disabled={false}
              onChange={[Function]}
              type="checkbox"
            />
            Level 14
          </label>
        </li>
        <li
          className={null}
          data-value={15}
        >
          <label>
            <input
              checked={false}
              disabled={false}
              onChange={[Function]}
              type="checkbox"
            />
            Level 15
          </label>
        </li>
        <li
          className={null}
          data-value={16}
        >
          <label>
            <input
              checked={false}
              disabled={false}
              onChange={[Function]}
              type="checkbox"
            />
            Level 16
          </label>
        </li>
        <li
          className={null}
          data-value={17}
        >
          <label>
            <input
              checked={false}
              disabled={false}
              onChange={[Function]}
              type="checkbox"
            />
            Level 17
          </label>
        </li>
        <li
          className={null}
          data-value={18}
        >
          <label>
            <input
              checked={false}
              disabled={false}
              onChange={[Function]}
              type="checkbox"
            />
            Level 18
          </label>
        </li>
        <li
          className={null}
          data-value={19}
        >
          <label>
            <input
              checked={false}
              disabled={false}
              onChange={[Function]}
              type="checkbox"
            />
            Level 19
          </label>
        </li>
        <li
          className={null}
          data-value={20}
        >
          <label>
            <input
              checked={false}
              disabled={false}
              onChange={[Function]}
              type="checkbox"
            />
            Level 20
          </label>
        </li>
        <li
          className={null}
          data-value={21}
        >
          <label>
            <input
              checked={false}
              disabled={false}
              onChange={[Function]}
              type="checkbox"
            />
            Level 21
          </label>
        </li>
        <li
          className={null}
          data-value={22}
        >
          <label>
            <input
              checked={false}
              disabled={false}
              onChange={[Function]}
              type="checkbox"
            />
            Level 22
          </label>
        </li>
        <li
          className={null}
          data-value={23}
        >
          <label>
            <input
              checked={false}
              disabled={false}
              onChange={[Function]}
              type="checkbox"
            />
            Level 23
          </label>
        </li>
        <li
          className={null}
          data-value={24}
        >
          <label>
            <input
              checked={false}
              disabled={false}
              onChange={[Function]}
              type="checkbox"
            />
            Level 24
          </label>
        </li>
        <li
          className={null}
          data-value={25}
        >
          <label>
            <input
              checked={false}
              disabled={false}
              onChange={[Function]}
              type="checkbox"
            />
            Level 25
          </label>
        </li>
        <li
          className={null}
          data-value={26}
        >
          <label>
            <input
              checked={false}
              disabled={false}
              onChange={[Function]}
              type="checkbox"
            />
            Level 26
          </label>
        </li>
        <li
          className={null}
          data-value={27}
        >
          <label>
            <input
              checked={false}
              disabled={false}
              onChange={[Function]}
              type="checkbox"
            />
            Level 27
          </label>
        </li>
        <li
          className={null}
          data-value={28}
        >
          <label>
            <input
              checked={false}
              disabled={false}
              onChange={[Function]}
              type="checkbox"
            />
            Level 28
          </label>
        </li>
        <li
          className={null}
          data-value={29}
        >
          <label>
            <input
              checked={false}
              disabled={false}
              onChange={[Function]}
              type="checkbox"
            />
            Level 29
          </label>
        </li>
        <li
          className={null}
          data-value={30}
        >
          <label>
            <input
              checked={false}
              disabled={false}
              onChange={[Function]}
              type="checkbox"
            />
            Level 30
          </label>
        </li>
      </ul>
    </div>
  </div>
  <div
    className="nice-control-group monsters-table--filter-min-max"
    data-name="cr"
  >
    <span
      className="nice-input-addon"
    >
      CR
    </span>
    <input
      className="nice-form-control"
      disabled={undefined}
      onChange={[Function]}
      onKeyPress={null}
      placeholder="Min..."
      type="number"
      value=""
    />
    <span
      className="nice-input-addon"
    >
      min
    </span>
    <input
      className="nice-form-control"
      disabled={undefined}
      onChange={[Function]}
      onKeyPress={null}
      placeholder="Max..."
      type="number"
      value=""
    />
    <span
      className="nice-input-addon"
    >
      max
    </span>
  </div>
  <div
    className="nice-control-group monsters-table--filter-min-max"
    data-name="xp"
  >
    <span
      className="nice-input-addon"
    >
      XP
    </span>
    <input
      className="nice-form-control"
      disabled={undefined}
      onChange={[Function]}
      onKeyPress={null}
      placeholder="Min..."
      type="number"
      value=""
    />
    <span
      className="nice-input-addon"
    >
      min
    </span>
    <input
      className="nice-form-control"
      disabled={undefined}
      onChange={[Function]}
      onKeyPress={null}
      placeholder="Max..."
      type="number"
      value=""
    />
    <span
      className="nice-input-addon"
    >
      max
    </span>
  </div>
</div>
`;
